envoy.yaml
static_resources:
  listeners:
  - name: main
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm"
              config: 
                name: "ExpoFilter"
                root_id: "ExpoFilterRootId"
                vm_config:
                  vm_id: "ExpoFilterRootVmId"
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "/etc/ExpoFilter.wasm"
                  allow_precompiled: true
                configuration:
                  "@type": "type.googleapis.com/google.protobuf.StringValue"
                  value: |
                    {
                      "query_param": {
                        "content-type": "application/x-www-form-urlencoded"
                      }
                    }
          - name: envoy.filters.http.router
            typed_config: {}
  - name: staticreply
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8099
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: auto
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                direct_response:
                  status: 200
                  body:
                    inline_string: "example body\n"
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}

  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8099

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

bootstrap_extensions:
  - name: envoy.filters.http.wasm
    typed_config:
      "@type": "type.googleapis.com/envoy.extensions.wasm.v3.WasmService"
      singleton: true
      config:
        name: "ExpoWorker"
        root_id: "ExpoWorkerRootId"
        configuration:
            "@type": "type.googleapis.com/google.protobuf.StringValue"
            value: |
              {
                  "poll_interval_milliseconds": 5000,
              }
        vm_config:
            vm_id: "ExpoWorkerVmId"
            runtime: "envoy.wasm.runtime.v8"
            allow_precompiled: true
            code:
                local:
                    filename: "/etc/ExpoWorker.wasm"
